--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">NBT</a>
+        <a class="navbar-brand" href="#">Flashbox Networks</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse navbar-right navbar-main-collapse">
         <ul class="nav navbar-nav">
@@ -42,7 +42,7 @@
       <div class="container">
        <div class="row">
          <div class="col-md-8 col-md-offset-2">
-           <img style="width: 600px;" src="img/logo_transparent_background.png">
+           <img style="width: 600px;" src="img/white_logo_transparent_background.png">
          </div> <!-- /.col-md-8 -->
        </div> <!-- /.row -->
      </div> <!-- /.container -->
